remove module-info